smaller BOLTS banner to avoid horizontal scrolling

--- a/website/static/source/general.less
+++ b/website/static/source/general.less
@@ -62,12 +62,12 @@ pre {
     margin-top: 20px;
     padding: 10px;
     line-height: 1;
-    .make-md-column(5);
+    .make-md-column(3);
     .make-md-column-offset(1);
 
     h1 {
       .display-font();
-      font-size: 110px;
+      font-size: 80px;
     }
   }
 }
